static/css/screen.css
/* ... */
.post-category {
    margin-left: 25px;
}

.post .post-content {
   margin-top: 15px;
}

div.highlight {
   word-wrap: normal;
   line-height: 1.3em;
}

body div.alert-info {
  background-color: #D9EDF7;
  border-color: #BCE8F1;
  color: #3A87AD;
  padding: 8px 35px 8px 14px;
  text-shadow: 0 1px 0 rgba(255,255,255,0.5);
  border-radius: 4px 4px 4px 4px;
  margin: 20px 0px;
}

@media (min-width: 768px) {
  .post, header .navigation nav, header.list-header {
    width: 750px;
  }
}

body div.alert-info strong {
  color: #3A87AD;
}

